--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
-    "react-youtube": "^7.14.0"
+    "react-youtube": "^7.14.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
