--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
