--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-animation-on-scroll": "^5.0.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
